refactor: rename hello_app to hello_world_app and update build options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Build options
 option(BUILD_ALL "Build all components (executables, tests, docs)" OFF)
 option(BUILD_CALCULATOR_EXECUTABLE "Build the calculator executable" ON)
-option(BUILD_HELLO_EXECUTABLE "Build the hello_world executable" ON)
+option(BUILD_HELLO_WORLD_EXECUTABLE "Build the hello_world executable" ON)
 option(BUILD_TESTS "Build unit tests" ON)
 option(BUILD_DOCS "Generate documentation with Doxygen" OFF)
 
 if(BUILD_ALL)
   set(BUILD_CALCULATOR_EXECUTABLE ON CACHE BOOL "" FORCE)
-  set(BUILD_HELLO_EXECUTABLE ON CACHE BOOL "" FORCE)
+  set(BUILD_HELLO_WORLD_EXECUTABLE ON CACHE BOOL "" FORCE)
   set(BUILD_TESTS ON CACHE BOOL "" FORCE)
   set(BUILD_DOCS ON CACHE BOOL "" FORCE)
 endif()
